src/styles/utilities/cursor.css
@media (hover: hover) {
  html {
    cursor: none;
    scroll-behavior: smooth;
  }
  /* ── CURSOR ── */
  #cur {
    position: fixed;
    width: var(--cursor-width, 25px);
    height: var(--cursor-height, 25px);
    border-radius: 50%;
    background: var(--color-light);
    pointer-events: none;
    z-index: 9999;
    top: -50%;
    left: -50%;
    transform: translate(-50%, -50%);

    mix-blend-mode: difference;

    transition:
      width 0.22s cubic-bezier(0.23, 1, 0.32, 1),
      height 0.22s cubic-bezier(0.23, 1, 0.32, 1);

    & .symbol {
      opacity: 0;
      scale: 0;
      width: 0;
      height: 0;

      @media (hover: none) and (pointer: coarse) {
        display: none;
      }

      .fills {
        fill: var(--color-dark);
      }
    }
  }

  body.cur-sm {
    --cursor-width: 1px;
    --cursor-height: 22px;
    --cursor-radius: 1px;
  }

  body.cur-link {
    --cursor-width: 40px;
    --cursor-height: 40px;

    #cur {
      mix-blend-mode: normal;
      background: var(--color-light);
      padding: 4px;
      border: 1px solid;
    }

    & #cur .symbol {
      opacity: 1;
      width: 100%;
      height: 100%;
      scale: 1;
    }
  }
}

